Added an item base class. Events need to be implemented in Blueprints.

--- a/GameDevClubFall2017.uproject
+++ b/GameDevClubFall2017.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "GameDevClubFall2017",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	]
 }
